Syndicati - V2
V2 Changelog:
Overall Major UI Upgrade to Match our Website for consistent UI